<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConverter"
    android:background="@drawable/ccback">


    <LinearLayout
        android:layout_width="315dp"

        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/convert"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"

            android:paddingTop="10dp"
            android:textColor="#000000"
            android:text="@string/usd_to_lkr"
            android:textSize="20sp"
            android:textStyle="bold" />




        <Button
            android:id="@+id/convertBtn"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textColor="#171717"
            android:layout_weight="1"
            android:background="#97FFFFFF"
            android:text="@string/convert" />


    </LinearLayout>


    <EditText
        android:id="@+id/userVal"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="313dp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:text="@string/convertPrice"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />




</RelativeLayout>